@@ -19,7 +19,9 @@ jobs:
     - name: Test on Solaris 11.4
       uses: vmactions/solaris-vm@v0.0.3
       with:
-        prepare: pkgutil -y -i gcc5g++ automake autoconf autoconf_archive libtool pkgconfig libcppunit1_12_1 libcppunit_dev
+        prepare: |
+          pkg install gcc-7 automake autoconf libtool
+          pkgutil -y -i autoconf_archive pkgconfig libcppunit1_12_1 libcppunit_dev
         run: |
           uname -a
           whoami
